--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@calvin_von/axios-api-module",
-    "version": "0.1.1",
+    "version": "1.0.0",
     "description": "Encapsulated api module based on axios",
     "main": "lib/index.js",
     "typings": "./index.d.ts",
@@ -24,7 +24,8 @@
     },
     "homepage": "https://github.com/CalvinVon/axios-api-module#readme",
     "dependencies": {
-        "axios": "^0.18.0"
+        "axios": "^0.18.0",
+        "@babel/runtime": "^7.3.1"
     },
     "devDependencies": {
         "@babel/cli": "^7.2.3",
@@ -32,7 +33,6 @@
         "@babel/plugin-proposal-class-properties": "^7.3.3",
         "@babel/plugin-transform-runtime": "^7.2.0",
         "@babel/preset-env": "^7.3.1",
-        "@babel/runtime": "^7.3.1",
         "babel-loader": "^8.0.5",
         "uglifyjs-webpack-plugin": "^2.1.1",
         "webpack": "^4.29.5",
