--- a/package.json
+++ b/package.json
@@ -25,11 +25,9 @@
         "url": "https://github.com/CalvinVon/axios-api-module/issues"
     },
     "homepage": "https://github.com/CalvinVon/axios-api-module#readme",
-    "dependencies": {
-        "axios": "^0.18.0",
-        "@babel/runtime": "^7.3.1"
-    },
     "devDependencies": {
+        "axios": "^0.18.0",
+        "@babel/runtime": "^7.3.1",
         "@babel/cli": "^7.2.3",
         "@babel/core": "^7.3.3",
         "@babel/plugin-proposal-class-properties": "^7.3.3",
