feat adding travel CI, codecov

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@calvin_von/axios-api-module",
-    "version": "1.3.2",
+    "version": "1.4.0",
     "description": "Encapsulated api module based on axios",
     "main": "lib/index.js",
     "module": "es/index.js",
@@ -8,7 +8,9 @@
     "scripts": {
         "build:es": "cross-env BABEL_ENV=es babel src --out-dir es",
         "build:lib": "cross-env BABEL_ENV=umd babel src --out-dir lib",
-        "build:dist": "cross-env BABEL_ENV=umd webpack --config webpack.config.js"
+        "build:dist": "cross-env BABEL_ENV=umd webpack --config webpack.config.js",
+        "test:unit": "cross-env BABEL_ENV=test mocha --require @babel/register --allow-uncaught",
+        "coverage:unit": "cross-env BABEL_ENV=test nyc mocha --require @babel/register"
     },
     "repository": {
         "type": "git",
@@ -26,18 +28,51 @@
     },
     "homepage": "https://github.com/CalvinVon/axios-api-module#readme",
     "devDependencies": {
-        "axios": "^0.18.0",
-        "@babel/runtime": "^7.3.1",
         "@babel/cli": "^7.2.3",
         "@babel/core": "^7.3.3",
         "@babel/plugin-proposal-class-properties": "^7.3.3",
         "@babel/plugin-transform-runtime": "^7.2.0",
         "@babel/preset-env": "^7.3.1",
+        "@babel/register": "^7.4.4",
+        "@babel/runtime": "^7.3.1",
+        "axios": "^0.18.0",
         "babel-loader": "^8.0.5",
         "babel-plugin-add-module-exports": "^1.0.0",
+        "chai": "^4.2.0",
         "cross-env": "^5.2.0",
+        "istanbul": "^0.4.5",
+        "mocha": "^6.1.4",
+        "nyc": "^14.1.1",
         "uglifyjs-webpack-plugin": "^2.1.1",
         "webpack": "^4.29.5",
         "webpack-cli": "^3.2.3"
+    },
+    "nyc": {
+        "check-coverage": true,
+        "per-file": true,
+        "statements": 0,
+        "lines": 0,
+        "functions": 0,
+        "branches": 0,
+        "include": [
+            "src/*.js"
+        ],
+        "exclude": [
+            "node_modules/",
+            "test/",
+            "lib/",
+            "es/",
+            "dist/",
+            "example/"
+        ],
+        "reporter": [
+            "lcov",
+            "text",
+            "text-summary"
+        ],
+        "extension": [
+            ".js"
+        ],
+        "cache": false
     }
 }
