--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - npm install -g codecov
 script:
   - npm run coverage:unit
-  - codecov -t CODECOV_TOKEN
+  - codecov -t $CODECOV_TOKEN
 
 branches:
   only:
